# Digital_Image_Processing

./: .gitignore  CMakeLists.txt  courseproject.cpp  courseproject.hpp  io.cpp  io.h  io.hpp  lab1.cpp  lab1.hpp  lab2.cpp  lab2.hpp  lab3.cpp  lab3.hpp  lab4.cpp  lab4.hpp  lab5.cpp  lab5.hpp  lab6.cpp  lab6.hpp  lab7.cpp  lab7.hpp  main.cpp  pgmreader.c  pgmreader.cpp  pgmreader.hpp  proto.h  proto.hpp
pic/: output.pgm
pic/lab1/: lena_output_1.pgm  lena_output_2.pgm  noise_output_1.pgm  noise_output_2.pgm
pic/lab2/output/: ImageNegative_lena.pgm  ImageReduce_alternative_line_bridge.pgm  ImageReduce_alternative_line_lena.pgm  ImageReduce_alternative_line_noise.pgm  ImageReduce_fractional_linear_reduction_bridge.pgm  ImageReduce_fractional_linear_reduction_lena.pgm  ImageReduce_fractional_linear_reduction_noise.pgm
pic/lab3/output/: ImageRotation_45_bridge.pgm  ImageRotation_45_lena.pgm  ImageShear_X_bridge.pgm  ImageShear_X_lena.pgm  ImageShear_Y_bridge.pgm  ImageShear_Y_lena.pgm  ImageTranslation_bridge.pgm  ImageTranslation_lena.pgm
pic/lab4/output/: ImageGammaCorrection_lena.pgm  ImageHistogram_Global_lena.pgm  ImageHistogram_Global_test.tif  ImageHistogram_Local_lena.pgm  ImageHistogram_Local_test.tif  ImageSharpen_Laplacian_lena.pgm  ImageSharpen_Sobel_lena.pgm
